Category model and get category service added.

--- a/src/app/Pages/category/category.component.html
+++ b/src/app/Pages/category/category.component.html
@@ -1,1 +1,51 @@
-<p>category works!</p>
+<section class="category">
+      <mat-toolbar color="primary" class="mb-3">
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+          <mat-icon>qr_code</mat-icon>
+        </button>
+        <span>Categories</span>
+        <span class="example-spacer"></span>
+
+      </mat-toolbar>
+
+
+    <!--<div class="container">
+      <form class="example-form">
+        <mat-form-field class="example-full-width">
+          <input type="text"
+                 placeholder="Search"
+                 aria-label="Number"
+                 matInput
+                 [formControl]="myControl"
+                 [matAutocomplete]="auto"
+                 [(ngModel)]="searchText">
+          <mat-icon matSuffix>search</mat-icon>
+          <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+              {{option}}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </form>
+    </div>-->
+
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-6" *ngFor="let c of category">
+          <mat-card class="example-card mb-4">
+            <mat-card-content>
+              <div class="row">
+                <div class="col-9">
+                  <h5 class="catName">{{c.name}}</h5>
+                </div>
+                <div class="col-3">
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+
+</section>
