--- a/src/app/Pages/category/category.component.html
+++ b/src/app/Pages/category/category.component.html
@@ -33,7 +33,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-6" *ngFor="let c of category">
-          <mat-card class="example-card mb-4">
+          <mat-card class="example-card mb-4" (click)="detail(c.id)">
             <mat-card-content>
               <div class="row">
                 <div class="col-9">
