--- a/src/app/Pages/product/product.component.html
+++ b/src/app/Pages/product/product.component.html
@@ -1,1 +1,92 @@
-<p>product works!</p>
+<section class="product">
+  <div>
+    <mat-toolbar color="primary" class="mb-3">
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon>qr_code</mat-icon>
+      </button>
+      <span>QR Menu</span>
+      <span class="example-spacer"></span>
+      <!--      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+              <mat-icon>home</mat-icon>
+            </button>-->
+    </mat-toolbar>
+  </div>
+
+  <!--<div class="container">
+    <form class="example-form">
+      <mat-form-field class="example-full-width">
+        <input type="text"
+               placeholder="Search"
+               aria-label="Number"
+               matInput
+               [formControl]="myControl"
+               [matAutocomplete]="auto"
+               [(ngModel)]="searchText">
+        <mat-icon matSuffix>search</mat-icon>
+        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+          <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+            {{option}}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+    </form>
+  </div>-->
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4" *ngFor="let p of product">
+        <mat-card class="mb-3" >
+          <div class="row">
+            <div class="col-6 lineheight">{{p.name}}</div>
+            <div class="col-3 lineheight">{{p.price}} TL</div>
+              <button class="cartbtn" mat-raised-button color="warn" (click)="addToCart(p)">
+                <mat-icon>add_shopping_cart</mat-icon>
+              </button>
+          </div>
+        </mat-card>
+      </div>
+    </div>
+
+  </div>
+  <div class="space"></div>
+
+  <footer class="footer">
+
+    <!--<mat-toolbar>
+      <button [matMenuTriggerFor]="menu" mat-icon-button class="example-icon"
+              aria-label="Example icon-button with share icon" matBadge="{{tasks.length}}" matBadgePosition="above"
+              matBadgeColor="accent" *ngIf="tasks.length !== 0">
+        <mat-icon>shopping_cart</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <mat-card class="example-card mb-2" *ngFor="let c of tasks">
+          <mat-card-content>
+            <div class="container">
+              <div class="row">
+                <div class="col-9">
+                  <p>{{c.Quantity}}x {{c.Name}}</p>
+                </div>
+                <div class="col-3">
+                  <a class="delete"  (click)="deleteTask(c)">
+                    <mat-icon>delete</mat-icon>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+
+        <div >
+          <a routerLink="/cart" class="mt-2 btn-block" mat-raised-button color="warn">Confirm Order
+            <mat-icon>add_shopping_cart</mat-icon>
+          </a>
+        </div>
+
+
+      </mat-menu>
+    </mat-toolbar>-->
+  </footer>
+
+</section>
+
+
