Added cart page.

--- a/src/app/Pages/product/product.component.html
+++ b/src/app/Pages/product/product.component.html
@@ -77,7 +77,7 @@
         </mat-card>
 
         <div >
-          <a routerLink="/cart" class="mt-2 btn-block" mat-raised-button color="warn">Confirm Order
+          <a routerLink="/cart" class="mt-2 btn-block" mat-raised-button color="warn">Sepete Git
             <mat-icon>add_shopping_cart</mat-icon>
           </a>
         </div>
