--- a/src/app/Pages/cart/cart.component.html
+++ b/src/app/Pages/cart/cart.component.html
@@ -33,7 +33,7 @@
       </tbody>
       <tfoot>
       <tr>
-        <td class="text-right" colspan="4">Sepet Toplam: <b>{{sum}}</b> TL </td>
+        <td class="text-right" colspan="4" *ngIf="products.length !== 0">Sepet Toplam: <b>{{sum}}</b> TL </td>
       </tr>
       </tfoot>
     </table>
@@ -45,54 +45,57 @@
 
   <div class="container mt-3">
 
-    <form class="example-form getaddress">
+    <form class="example-form getaddress" [formGroup]="orderForm" (ngSubmit)="confirm()" *ngIf="products.length !== 0">
       <mat-form-field class="example-full-width">
         <mat-label>İsim</mat-label>
-        <input matInput name="name" [(ngModel)]="name">
+        <input matInput name="name" formControlName="name">
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>Telefon</mat-label>
         <span matPrefix>+90 &nbsp;</span>
-        <input type="tel" [(ngModel)]="phone" matInput  maxlength="10" name="phone" >
+        <input type="tel" matInput  maxlength="10" name="phone" formControlName="phone">
       </mat-form-field>
 
       <table class="example-full-width" cellspacing="0"><tr>
         <td><mat-form-field class="example-full-width">
           <mat-label>Mahalle</mat-label>
-          <input [(ngModel)]="neighborhood" matInput name="neighbor">
+          <mat-select formControlName="neighborhood">
+            <mat-option value="Barbaros">Barbaros</mat-option>
+          </mat-select>
         </mat-form-field></td>
         <td><mat-form-field class="example-full-width">
           <mat-label>Cadde</mat-label>
-          <input [(ngModel)]="avenue" matInput name="avenue">
+          <input matInput name="avenue" formControlName="avenue">
         </mat-form-field></td>
       </tr></table>
       <table class="example-full-width" cellspacing="0"><tr>
         <td><mat-form-field class="example-full-width">
           <mat-label>Sokak</mat-label>
-          <input [(ngModel)]="street" matInput name="street">
+          <input matInput name="street" formControlName="street">
         </mat-form-field></td>
         <td><mat-form-field class="example-full-width">
           <mat-label>Apt. No</mat-label>
-          <input [(ngModel)]="no" matInput name="no" >
+          <input matInput name="no" formControlName="no">
         </mat-form-field></td>
       </tr></table>
 
       <mat-form-field class="example-full-width">
         <mat-label>Semt</mat-label>
-        <input matInput name="district" readonly value="Çankaya" >
+        <input matInput name="district" readonly value="Çankaya" formControlName="district">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Notunuz</mat-label>
-        <textarea matInput placeholder="Belirtmek istedikleriniz"></textarea>
+        <textarea matInput placeholder="Belirtmek istedikleriniz" formControlName="note"></textarea>
       </mat-form-field>
+      <button class="btn-block mt-3" *ngIf="sum !== 0" mat-raised-button color="primary">
+        Sipariş Ver
+      </button>
     </form>
 
     <div>
-      <button class="btn-block mt-3" *ngIf="sum !== 0" (click)="confirm()" mat-raised-button color="primary">
-        Sipariş Ver
-      </button>
-      <div class="alert alert-danger" *ngIf="sum === 0">
+
+      <div class="alert alert-danger" *ngIf="products.length === 0">
         <h4 class="text-center m-0">Lütfen sepetinize ürün ekleyiniz.</h4>
       </div>
     </div>
